--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -34,7 +34,7 @@
 
 .login .view-2 {
   height: 295px;
-  left: 461px;
+  left: 460px;
   position: absolute;
   top: 210px;
   width: 413px;
@@ -45,8 +45,8 @@
   -webkit-text-fill-color: transparent;
   background: linear-gradient(
     180deg,
-    rgb(51, 0, 255) 0%,
-    rgb(173.4, 0, 255) 100%
+    #87CEFA 0%,
+    #c287fc 100%
   );
   background-clip: text;
   color: transparent;
@@ -88,7 +88,7 @@
 .login .div-wrapper {
   background-color: #ffffff;
   border: 1px solid;
-  border-color: #cb5fff;
+  border-color: #000000;
   border-radius: 10px;
   height: 58px;
   position: relative;
