--- a/src/component/Mysell.css
+++ b/src/component/Mysell.css
@@ -78,7 +78,7 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 34px;
+  top: 40px;
   width: 164px;
 }
 
@@ -94,6 +94,7 @@
   position: absolute;
   top: 34px;
   width: 800px;
+  border-color: #00000000;
 }
 
 .mystore .overlap {
@@ -138,7 +139,7 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 31px;
+  top: 50px;
   width: 168px;
 }
 
@@ -150,17 +151,16 @@
   width: 500px;
 }
 
-.mystore .text-wrapper-5 {
+.mystore .detail_text {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 26px;
-  font-weight: 400;
   left: 0;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 64px;
-  width: 168px;
+  top: 80px;
+  width: 150px;
 }
 
 .mystore .element {
@@ -187,7 +187,18 @@
   top: 0;
   width: 1022px;
 }
-
+.mystore .text-wrapper-5 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26px;
+  font-weight: 400;
+  left: 2px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 64px;
+  width: 168px;
+}
 .mystore .text-wrapper-6 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
@@ -250,7 +261,7 @@
 }
 
 .mystore .view-11 {
-  height: 235px; /* 변경 */
+  height: 150px; /* 변경 */
   top: 910px; /* 변경 */
   left: 138px;
   overflow: hidden;
@@ -267,8 +278,9 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 34px;
+  top: 50px;
   width: 164px;
+  border-color: #00000000;
 }
 
 .mystore .line-4 {
@@ -279,11 +291,10 @@
   width: 1024px;
 }
 
-.mystore .frame {
-  top: 1010px; /* 변경 */
+.mystore .det {
+  top: 1070px; /* 변경 */
   height: 265px;
   left: 138px;
-  overflow: hidden;
   position: absolute;
   width: 1024px;
 }
@@ -307,13 +318,12 @@
 
 .mystore .view-12 {
   height: 56px;
-  color: #ffffff;
+  color: #000000;
   left: 1002px;
   position: absolute;
   top: 1310px;
   width: 160px;
   border-radius: 10px;
-  border-color: #ffffff;
-
-  background-color: #fc8eff;
+  border-color: #ffffff00;
+  background-color: #eeddff;
 }
